--- a/assets/index.jade
+++ b/assets/index.jade
@@ -180,7 +180,8 @@ html
           .features
             h3 Features
             ul
-              li Variables              
+              li Optional colons              
+              li Variables          
               li Interpolation
               li Mixins
               li Arithmetic
