Utilizing Evaluator#paths in url() image lookup. Closes #114

--- a/examples/images.styl
+++ b/examples/images.styl
@@ -6,4 +6,7 @@ body
   background url(/images/gopher.jpg)
 
 .sprite
+  // both work due to the additional paths option
+  // passed to stylus.url()
   background url(/images/sprite.gif)
+  background url(sprite.gif)
