--- a/test/integration/tests/css.selectors.styl
+++ b/test/integration/tests/css.selectors.styl
@@ -24,3 +24,22 @@ ul {
     }
   }
 }
+
+
+foo {
+  border-radius: 5px;
+}
+
+foo bar baz {
+  border-radius: 5px;
+}
+
+foo
+bar
+baz {
+  border-radius: 5px;
+}
+
+input[type=button] {
+  border-radius: 5px;
+}
