Fixed bug causing Lexer#selector to consume trailing {

--- a/test/integration/tests/css.selectors.css
+++ b/test/integration/tests/css.selectors.css
@@ -29,3 +29,9 @@ baz {
 input[type=button] {
   border-radius: 5px;
 }
+button,
+input[type=button],
+input[type=submit],
+a.button {
+  border-radius: 5px;
+}
