--- a/test/integration/tests/css.selectors.styl
+++ b/test/integration/tests/css.selectors.styl
@@ -43,3 +43,11 @@ baz {
 input[type=button] {
   border-radius: 5px;
 }
+
+
+button
+input[type=button]
+input[type=submit]
+a.button {
+  border-radius: 5px;
+}
