Accepting ; after statements

--- a/test/integration/tests/css.mixins.root.styl
+++ b/test/integration/tests/css.mixins.root.styl
@@ -19,7 +19,7 @@ button(pad)
   input[type=submit],
   input[type=button] {
     padding: pad;
-    hover()
+    hover();
   }
 
-button(5px 10px)
+button(5px 10px);
