--- a/assets/index.jade
+++ b/assets/index.jade
@@ -51,6 +51,8 @@ html
         li
           a(href='docs/literal.html') CSS Literal
         li
+          a(href='docs/css-style.html') CSS Style Syntax
+        li
           a(href='docs/escape.html') Char Escaping
         li
           a(href='docs/executable.html') Executable
@@ -183,7 +185,10 @@ html
           .features
             h3 Features
             ul
-              li Optional colons              
+              li Optional colons         
+              li Optional semi-colons         
+              li Optional commas         
+              li Optional braces         
               li Variables          
               li Interpolation
               li Mixins
