--- a/assets/index.jade
+++ b/assets/index.jade
@@ -174,6 +174,15 @@ html
             | 
             | opposite(top left)
             | // => bottom right
+        .example
+          h2 What if it were all optional?
+          pre
+            | fonts = helvetica, arial, sans-serif
+            | 
+            | body {
+            |   padding: 50px;
+            |   font: 14px/1.4 fonts;
+            | }
         .example.closing
           h2 Get styling with Stylus
           pre.terminal $ npm install stylus
