more url() tests

--- a/test/cases/bifs.url.css
+++ b/test/cases/bifs.url.css
@@ -1,4 +1,6 @@
 body {
   background: url("/path/to/my image.png");
   background: url("/path/to/my image.png");
+  background: url("foo.png");
+  background: url("bar.png");
 }
