--- a/test/cases/bifs.url.styl
+++ b/test/cases/bifs.url.styl
@@ -1,3 +1,5 @@
 body
   background url("/path/to/my image.png")
   background url(/path/to/my image.png)
+  background url(foo.png)
+  background url('bar.png')
