Fixed "in" when called in a function

--- a/test/cases/operators.in.styl
+++ b/test/cases/operators.in.styl
@@ -35,10 +35,10 @@ body
   foo fn(1,2,3)
 
 fn()
-  'test' in arguments
+  test in arguments
 
 body
-  foo fn('test')
+  foo fn(test)
   foo fn(a, b, c)
-  foo fn(a, 'test', c)
-  foo fn(a 'test' c)
+  foo fn(a, test, c)
+  foo fn(a test c)
