--- a/test/cases/mixins.complex.fix-to.styl
+++ b/test/cases/mixins.complex.fix-to.styl
@@ -11,8 +11,8 @@ fix-to(a, b)
 fix-to(pos...)
   position fixed
   if length(pos) == 2
-    {a} 0
-    {b} 0
+    {pos[0]} 0
+    {pos[1]} 0
   else if length(pos) == 4
     a = pos[0..1]
     b = pos[2..3]
