--- a/test/cases/parent.styl
+++ b/test/cases/parent.styl
@@ -24,7 +24,7 @@ box-shadow()
   -moz-box-shadow arguments
   box-shadow arguments
   html.ie8 &,
-  html.ie7 &,
+  html.ie7 & foo,
   html.ie6 &
     border solid 1px arguments[length(arguments) - 1]
 
