Change indent parsing to work like other indent-based langs

--- a/test/cases/css.whitespace.css
+++ b/test/cases/css.whitespace.css
@@ -3,6 +3,17 @@ body {
 }
 body {
   padding: 5px;
+}
+body {
+  padding: 5px;
+  margin: 0;
+}
+body {
+  padding: 5px;
+  margin: 0;
+}
+body {
+  padding: 5px;
   margin: 0;
 }
 body {
