--- a/test/cases/css.whitespace.styl
+++ b/test/cases/css.whitespace.styl
@@ -3,7 +3,19 @@ body
   padding 5px
 
 body
+ padding 5px
+
+body
   padding: 5px;  margin: 0;
+
+body
+    padding: 5px;
+    margin: 0;
+
+body {
+     padding: 5px;
+  margin: 0;
+}
 
 body {
   padding: 5px;  margin: 0;
