Added test for $ in identifiers

--- a/test/cases/variables.styl
+++ b/test/cases/variables.styl
@@ -1,7 +1,7 @@
 
 size = 14px
 font-family = 'Lucida Grande', Arial, sans-serif
-type = solid
+$type = solid
 blue = #00c
 
 body
@@ -14,4 +14,4 @@ body
 
 a
   font 11px Impact, font-family, serif
-  border 1px type #fff
+  border 1px $type #fff
