Added @keyframes dynamic name support

--- a/test/cases/css.keyframes.styl
+++ b/test/cases/css.keyframes.styl
@@ -28,3 +28,12 @@
   
   to { foo: bar; }
 }
+
+animate(name) {
+  @keyframes name {
+    from { color: red; }
+    to { color: blue; }
+  }
+}
+
+animate(something)
