Added "is" and "is not" aliases for "==" and "!="

--- a/test/cases/operators.styl
+++ b/test/cases/operators.styl
@@ -71,7 +71,7 @@ body
   foo !false and !false and 5
   
   // true
-  foo !!5 == true or !!0 == false
+  foo !!5 is true or !!0 is false
   foo !!5 == false or !!0 == false
   
   // true
