Fixed dynamic expressions in url(). Closes #105

--- a/test/cases/bifs.url.css
+++ b/test/cases/bifs.url.css
@@ -1,6 +1,11 @@
 body {
-  background: url("/path/to/my image.png");
-  background: url("/path/to/my image.png");
-  background: url("foo.png");
-  background: url("bar.png");
+  background: url("/images/foo.png");
+  background: url("/images/foo.png");
+  background: url("/images/foo.png");
+  background: url("/images/foo.png");
+  background: url("/images/foo.png");
+  background: url("/images/foo.png");
+  background: url("/images/foo.png");
+  background: url("/images/foo.png");
+  background: url("http://foo.com/images/bar.png");
 }
