added dynamic @import test

--- a/test/cases/import.ordering.styl
+++ b/test/cases/import.ordering.styl
@@ -1,10 +1,12 @@
 
+dir = 'import.ordering'
+
 one
   foo bar
 
-@import "import.ordering/two"
+@import dir + "/two"
 
 three
   foo bar
 
-@import "import.ordering/four"
+@import dir + '/four'
