--- a/lib/functions/index.styl
+++ b/lib/functions/index.styl
@@ -1,7 +1,13 @@
 
+-string(arg)
+  type(arg) + ' ' + arg
+
 require-color(color)
  unless color is a 'color' or color is a 'hsla' 
-   error('RGB or HSL value expected, got a ' + type(color) + ' ' + color)
+   error('RGB or HSL value expected, got a ' + -string(color))
+
+require-unit(n)
+  error('unit expected, got a ' + -string(n))
 
 odd(n)
   1 == n % 2
@@ -17,8 +23,10 @@ dark(color)
 
 desaturate(color, amount)
   require-color(color)
+  require-unit(amount)
   hsla(hue(color), saturation(color) - amount, lightness(color), alpha(color))
 
 saturate(color, amount)
   require-color(color)
+  require-unit(amount)
   hsla(hue(color), saturation(color) + amount, lightness(color), alpha(color))
