--- a/lib/functions/index.styl
+++ b/lib/functions/index.styl
@@ -1,30 +1,48 @@
 
+// stringify the given arg
+
 -string(arg)
   type(arg) + ' ' + arg
+
+// require a color
 
 require-color(color)
  unless color is a 'color' or color is a 'hsla' 
    error('RGB or HSL value expected, got a ' + -string(color))
 
+// require a unit
+
 require-unit(n)
   error('unit expected, got a ' + -string(n))
+
+// check if n is an odd number
 
 odd(n)
   1 == n % 2
 
+// check if n is an even number
+
 even(n)
   0 == n % 2
+
+// check if color is light
 
 light(color)
   lightness(color) >= 50%
 
+// check if color is dark
+
 dark(color)
   lightness(color) < 50%
+
+// desaturate color by amount
 
 desaturate(color, amount)
   require-color(color)
   require-unit(amount)
   hsla(hue(color), saturation(color) - amount, lightness(color), alpha(color))
+
+// saturate color by amount
 
 saturate(color, amount)
   require-color(color)
