min() / max() defined in stylus

--- a/lib/functions/index.styl
+++ b/lib/functions/index.styl
@@ -43,6 +43,8 @@ abs(n){ math(n, 'abs') }
 ceil(n){ math(n, 'ceil') }
 floor(n){ math(n, 'floor') }
 round(n){ math(n, 'round') }
+min(a, b) { a < b ? a : b }
+max(a, b) { a > b ? a : b }
 
 // check if n is an odd number
 
