Replaced Color node with RGBA node. is a "color" is true for HSLA / RGBA. Closes #176

--- a/lib/functions/index.styl
+++ b/lib/functions/index.styl
@@ -7,7 +7,7 @@
 // require a color
 
 require-color(color)
- unless color is a 'color' or color is a 'hsla' 
+ unless color is a 'color' 
    error('RGB or HSL value expected, got a ' + -string(color))
 
 // require a unit
