--- a/test/cases/bifs.type.css
+++ b/test/cases/bifs.type.css
@@ -3,7 +3,7 @@ body {
   background: "unit";
   background: "unit";
   background: "hsla";
-  background: "color";
+  background: "rgba";
   background: "ident";
   background: "unit";
   background: "function";
