--- a/test/cases/mixin.order.styl
+++ b/test/cases/mixin.order.styl
@@ -1,13 +1,20 @@
-pad(pad = true, margin = true)
-  two 2
+mixin2()
   three 3
-  if pad
-    padding 5px
-  if margin
-    margin 5px
+
+mixin3()
   four 4
+  mixin4()
+
+mixin4()
+  five 5
+
+mixin()
+  two 2
+  mixin2()
+  mixin3()
+  six 6
 
 body
   one 1
-  pad()
-  five 5
+  mixin()
+  seven 7
