--- a/test/cases/for.function.css
+++ b/test/cases/for.function.css
@@ -1,15 +1,12 @@
 body {
   foo: 10;
+  foo: 20;
   foo: 10;
 }
 body {
-  foo: "onetwothree";
-  foo: "onetwothree";
-}
-body {
-  foo: "one, two, three";
+  foo: "foo bar baz";
+  foo: "foo, bar, baz";
   foo: "1 2 3";
-  foo: "1, 2, 3";
   foo: "1, 2, 3";
 }
 body {
