--- a/test/cases/for.function.styl
+++ b/test/cases/for.function.styl
@@ -38,3 +38,14 @@ body
   fonts = Impact Arial sans-serif
   for font, i in fonts
     foo i font
+
+last-even(nums...)
+  ret = n if n % 2 == 0 for n in nums
+  ret
+
+first-even(nums...)
+  return n if n % 2 == 0 for n in nums
+
+body
+  foo last-even(1,3,30,5,6,12,2,24,3)
+  foo first-even(1,3,30,5,6,12,2,24,3)
