--- a/test/cases/regression.146.styl
+++ b/test/cases/regression.146.styl
@@ -8,8 +8,8 @@ for n in nums
 
 body
   foo
-  for n in nums
-    foo n
+    for n in nums
+      bar n
 
 something()
   nums = 1 2 3
@@ -23,9 +23,9 @@ something()
 something()
   nums = 1 2 3
   foo
-  for n in nums
-    input[for=name]
-      foo n
+    for n in nums
+      input[for=name]
+        bar n
 
 #login
   something()
