more implicit examples

--- a/examples/implicit-functions.styl
+++ b/examples/implicit-functions.styl
@@ -9,3 +9,15 @@ form
 
 a.button
   border-radius 10px
+
+
+support-for-ie ?= true
+
+opacity(n)
+  opacity n
+  if support-for-ie
+    filter unquote('progid:DXImageTransform.Microsoft.Alpha(Opacity=' + round(n * 100) + ')')
+
+#logo
+  &:hover
+    opacity 0.5
