--- a/assets/index.jade
+++ b/assets/index.jade
@@ -61,6 +61,8 @@ html
         li
           a(href='docs/middleware.html') Connect Middleware
         li
+          a(href='docs/introspection.html') Introspection API
+        li
           a(href='docs/js.html') JavaScript API
       #content
         .example
