--- a/assets/index.jade
+++ b/assets/index.jade
@@ -68,123 +68,123 @@ html
         .example
           h2 CSS needs a hero
           pre
-            | body {
-            |   font: 12px Helvetica, Arial, sans-serif;
-            | }
-            | a.button {
-            |   -webkit-border-radius: 5px;
-            |   -moz-border-radius: 5px;
-            |   border-radius: 5px;
-            | }
+            body {
+              font: 12px Helvetica, Arial, sans-serif;
+            }
+            a.button {
+              -webkit-border-radius: 5px;
+              -moz-border-radius: 5px;
+              border-radius: 5px;
+            }
         
         .example
           h2 What if we could omit braces?
           pre
-            | body
-            |   font: 12px Helvetica, Arial, sans-serif;
-            | 
-            | a.button
-            |   -webkit-border-radius: 5px;
-            |   -moz-border-radius: 5px;
-            |   border-radius: 5px;
+            body
+              font: 12px Helvetica, Arial, sans-serif;
+            
+            a.button
+              -webkit-border-radius: 5px;
+              -moz-border-radius: 5px;
+              border-radius: 5px;
         
         .example
           h2 How about semi-colons?
           pre
-            | body
-            |   font: 12px Helvetica, Arial, sans-serif
-            | 
-            | a.button
-            |   -webkit-border-radius: 5px
-            |   -moz-border-radius: 5px
-            |   border-radius: 5px
+            body
+              font: 12px Helvetica, Arial, sans-serif
+            
+            a.button
+              -webkit-border-radius: 5px
+              -moz-border-radius: 5px
+              border-radius: 5px
 
         .example
           h2 Why stop there, drop the colons
           pre
-            | body
-            |   font 12px Helvetica, Arial, sans-serif
-            | 
-            | a.button
-            |   -webkit-border-radius 5px
-            |   -moz-border-radius 5px
-            |   border-radius 5px
+            body
+              font 12px Helvetica, Arial, sans-serif
+            
+            a.button
+              -webkit-border-radius 5px
+              -moz-border-radius 5px
+              border-radius 5px
         
         .example
           h2 Keep things DRY
           pre
-            | border-radius()
-            |   -webkit-border-radius arguments
-            |   -moz-border-radius arguments
-            |   border-radius arguments
-            | 
-            | body
-            |   font 12px Helvetica, Arial, sans-serif
-            | 
-            | a.button
-            |   border-radius(5px)
+            border-radius()
+              -webkit-border-radius arguments
+              -moz-border-radius arguments
+              border-radius arguments
+            
+            body
+              font 12px Helvetica, Arial, sans-serif
+            
+            a.button
+              border-radius(5px)
         
         .example
           h2 How about transparent mixins?
           pre
-            | border-radius()
-            |   -webkit-border-radius arguments
-            |   -moz-border-radius arguments
-            |   border-radius arguments
-            | 
-            | body
-            |   font 12px Helvetica, Arial, sans-serif
-            | 
-            | a.button
-            |   border-radius 5px
+            border-radius()
+              -webkit-border-radius arguments
+              -moz-border-radius arguments
+              border-radius arguments
+            
+            body
+              font 12px Helvetica, Arial, sans-serif
+            
+            a.button
+              border-radius 5px
 
         .example
           h2 Create &amp; Share
           pre
-            | @import 'vendor'
-            | 
-            | body
-            |   font 12px Helvetica, Arial, sans-serif
-            | 
-            | a.button
-            |   border-radius 5px
+            @import 'vendor'
+            
+            body
+              font 12px Helvetica, Arial, sans-serif
+            
+            a.button
+              border-radius 5px
         .example
           h2 Even in-language functions!
           pre  
-            | opposite-position(pos)
-            |   if pos == top
-            |     bottom
-            |   else if pos == bottom
-            |     top
-            |   else if pos == left
-            |     right
-            |   else if pos == right
-            |     left
-            |   else
-            |     error('Invalid position ' + pos)
-            | 
-            | opposite(positions)
-            |   for pos in positions
-            |     pos = opposite-position(pos)
-            |     ret = ret is defined ? ret pos : pos
-            | 
-            | opposite(top)
-            | // => bottom
-            | 
-            | opposite(left)
-            | // => right
-            | 
-            | opposite(top left)
-            | // => bottom right
+            opposite-position(pos)
+              if pos == top
+                bottom
+              else if pos == bottom
+                top
+              else if pos == left
+                right
+              else if pos == right
+                left
+              else
+                error('Invalid position ' + pos)
+            
+            opposite(positions)
+              for pos in positions
+                pos = opposite-position(pos)
+                ret = ret is defined ? ret pos : pos
+            
+            opposite(top)
+            // => bottom
+            
+            opposite(left)
+            // => right
+            
+            opposite(top left)
+            // => bottom right
         .example
           h2 What if it were all optional?
           pre
-            | fonts = helvetica, arial, sans-serif
-            | 
-            | body {
-            |   padding: 50px;
-            |   font: 14px/1.4 fonts;
-            | }
+            fonts = helvetica, arial, sans-serif
+            
+            body {
+              padding: 50px;
+              font: 14px/1.4 fonts;
+            }
         .example.closing
           h2 Get styling with Stylus
           pre.terminal $ npm install stylus
