--- a/test/cases/bifs.join.styl
+++ b/test/cases/bifs.join.styl
@@ -4,4 +4,8 @@ body
   foo join(', ', 1 2 3)
   foo join(',', 1 2 3)
   foo join(',', 1)
-  foo join(',')
+  foo join(',') == null
+
+body
+  foo join(', ', 1, 2, 3)
+  foo join(', ', one 1, two 2, three 3)
