removed {darken,lighten}-by() BIFs

--- a/examples/builtins.styl
+++ b/examples/builtins.styl
@@ -3,8 +3,8 @@
 // color manipulation
 
 body
+  color darken(#eee, 50)
   color darken(#eee, 50%)
-  color darken-by(#eee, 50%)
   color #eee - rgba(100,0,0,0.5)
   color rgba(#eee,.5)
 
