--- a/test/cases/regression.107.lookup-failure.styl
+++ b/test/cases/regression.107.lookup-failure.styl
@@ -1,9 +1,9 @@
 minimal-button(bg = #e3e3e3)
   background bg
   &:hover
-    background darken(bg, 3%)
+    background darken(bg, 3)
   &:active
-    background darken(bg, 5%)
+    background darken(bg, 5)
   nested
     really-nested
       with-even-more-nesting
