--- a/test/cases/literal.styl
+++ b/test/cases/literal.styl
@@ -5,3 +5,14 @@
   
   a { text-decoration: none; }
 }
+
+
+border-radius() {
+  border-radius: arguments[2];
+  border-radius: arguments[2] == '/';
+  border-radius: '/' == arguments[2];
+}
+
+#login {
+  border-radius: 1px 2px / 3px 4px;
+}
