Fixed HSLA operations

--- a/test/cases/arithmetic.color.styl
+++ b/test/cases/arithmetic.color.styl
@@ -12,3 +12,10 @@ body {
   color: (#919191 / 2);
   color: (#919191 * 20%);
 }
+
+body {
+  color: hsl(#919191) * 0.2;
+  color: 0.2 * hsl(#919191);
+  color: (hsl(#919191) / 2);
+  color: hsl(#919191) * 20%;
+}
