Added special-case for percentage based RGBA operations
basically anything such as "color + 30%" can
be read as "add 30 percent of my current value",
as many would expect, instead of adding a literal 30
to each component like LESS

--- a/test/cases/arithmetic.color.css
+++ b/test/cases/arithmetic.color.css
@@ -16,3 +16,18 @@ body {
   color: #494949;
   color: #fff;
 }
+body {
+  color: #222;
+  color: #222;
+  color: #3d3d3d;
+}
+body {
+  color: #a3a3a3;
+  color: #a3a3a3;
+  color: #9c9c9c;
+}
+body {
+  color: #6d6d6d;
+  color: #747474;
+  color: #2d0606;
+}
