--- a/test/cases/arithmetic.color.styl
+++ b/test/cases/arithmetic.color.styl
@@ -19,3 +19,21 @@ body {
   color: (hsl(#919191) / 2);
   color: hsl(#919191) * 20%;
 }
+
+body {
+  color: darken(#888, 75%);
+  color: #888 - 75%;
+  color: #888 - 75;
+}
+
+body {
+  color: lighten(#888, 20%);
+  color: #888 + 20%;
+  color: #888 + 20;
+}
+
+body {
+  color: #888 - 20%;
+  color: #888 - 20;
+  color: #E21E1E - 80%;
+}
