Added support for "hsl + 15deg" to adjust hue

--- a/test/cases/arithmetic.color.styl
+++ b/test/cases/arithmetic.color.styl
@@ -37,3 +37,11 @@ body {
   color: #888 - 20;
   color: #E21E1E - 80%;
 }
+
+$color = hsl(120deg, 90%, 60%);
+
+body {
+  color: $color;
+  color: $color + 20deg;
+  color: $color - 20deg;
+}
