Added support to "spin" hue

--- a/test/cases/arithmetic.color.styl
+++ b/test/cases/arithmetic.color.styl
@@ -45,3 +45,13 @@ body {
   color: $color + 20deg;
   color: $color - 20deg;
 }
+
+
+$color = hsl(120deg, 90%, 60%);
+
+body {
+  color: hue($color);
+  color: hue($color - 80deg);
+  color: hue($color - 180deg);
+  color: hue($color - 250deg);
+}
