--- a/test/cases/kwargs.css
+++ b/test/cases/kwargs.css
@@ -54,3 +54,10 @@ body {
   foo: "1|2|3";
   foo: "1|2|3";
 }
+body {
+  foo: rgba(100,50,10,0.5);
+  foo: rgba(100,50,10,0.5);
+  foo: rgba(100,50,10,0.5);
+  foo: rgba(100,50,10,0.5);
+  foo: rgba(100,50,10,0.5);
+}
