--- a/test/cases/kwargs.styl
+++ b/test/cases/kwargs.styl
@@ -64,3 +64,11 @@ body {
   foo: join(1 2 3, delim: '|');
   foo: join(delim: '|', 1 2 3);
 }
+
+body {
+  foo: rgba(100,50,10,0.5);
+  foo: rgba(100,alpha: 0.5, 50,10);
+  foo: rgba(alpha: 0.5, 100, 50,10);
+  foo: rgba(alpha: 0.5, green: 50, red: 100, 10);
+  foo: rgba(alpha: 0.5, green: 50, red: 100, blue: 10);
+}
