Added support for `50 + 25% == 75`

--- a/test/cases/arithmetic.styl
+++ b/test/cases/arithmetic.styl
@@ -16,3 +16,11 @@ h2
   font 2px ** 4
   y = 10
   x = 15
+
+body {
+  foo: 50% * 2;
+  foo: 2 * 50%;
+  foo: 2 + 50%;
+  foo: 2 - 50%;
+  foo: 50% - 50%;
+}
