--- a/test/cases/bifs.add-property.css
+++ b/test/cases/bifs.add-property.css
@@ -14,3 +14,8 @@ body {
   foo: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#eee), to(#999));
   foo: -moz-linear-gradient(#eee, #999);
 }
+body {
+  foo: something(15px);
+  foo: -webkit-something(15px);
+  foo: -moz-something(15px);
+}
