Fixed s() BIF with expressions containing several nodes

--- a/test/cases/bifs.s.styl
+++ b/test/cases/bifs.s.styl
@@ -7,4 +7,5 @@ body {
   foo: s('rgba(%s, %s, %s, 0.5)', 255, 100, 50);
   foo: s('bar(%Z)', 15px);
   foo: s('bar(%s, %s)', 15px);
+  foo: s('bar(%s, %s)', foo bar, 1 2 3);
 }
