--- a/test/cases/bifs.s.styl
+++ b/test/cases/bifs.s.styl
@@ -8,5 +8,5 @@ body {
   foo: s('bar(%Z)', 15px);
   foo: s('bar(%s, %s)', 15px);
   foo: s('bar(%s, %s)', foo bar, 1 2 3);
-  foo: s('bar(%s)', hsl(#eeeeee));
+  foo: s('bar(%s)', hsl(#eee));
 }
